project(gui)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_AUTOMOC ON)
find_package( OpenCV REQUIRED )
find_package(Qt5 COMPONENTS Widgets REQUIRED)
find_package (Threads)
#link_directories(${CMAKE_SOURCE_DIR}/Util/src)
#link_directories(${CMAKE_SOURCE_DIR}/model/src)
add_subdirectory(test)
add_subdirectory(src)
